<?xml version="1.0"?>
<package format="2">
  <name>robo1</name>
  <version>0.0.0</version>
  <description>Robotics homework 1</description>


  <maintainer email="user@todo.todo">username</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>